# Class-Widgets-2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build&release.yml
class_widgets_2/: __main__.py
class_widgets_2/core/: __init__.py  central.py
class_widgets_2/core/automations/: __init__.py  base.py  manager.py  update_check.py
class_widgets_2/core/config/: __init__.py  manager.py  model.py
class_widgets_2/core/convertor/: converter.py  slots.py
class_widgets_2/core/notification/: __init__.py  manager.py  provider.py  service.py
class_widgets_2/core/parser/: __init__.py  schedule.py
class_widgets_2/core/plugin/: __init__.py  api.py  bridge.py  components.py  loader.py  manager.py  models.py
class_widgets_2/core/schedule/: __init__.py  editor.py  manager.py  model.py  runtime.py  service.py
class_widgets_2/core/themes/: interceptor.py  loader.py  manager.py
class_widgets_2/core/timer/: __init__.py  union_update.py
class_widgets_2/core/updater/: __init__.py  bridge.py  downloader.py  updater.py  workers.py
class_widgets_2/core/utils/: auto_startup.py  backend.py  calculator.py  debugger.py  json_loader.py  subjects.py  translator.py  tray.py
class_widgets_2/core/widgets/: __init__.py  core.py  model.py
class_widgets_2/core/windows/: windows.py
class_widgets_2/plugins/: __init__.py
class_widgets_2/plugins/cw_widgets/: __init__.py  widgets.py
class_widgets_2/qml/ClassWidgets/: qmldir
class_widgets_2/qml/ClassWidgets/pages/editor/: Home.qml  Schedule.qml  Subjects.qml  Timeline.qml
class_widgets_2/qml/ClassWidgets/pages/settings/: Home.qml  Update.qml
class_widgets_2/qml/ClassWidgets/pages/settings/General/: Index.qml  Interactions.qml  Widgets.qml
class_widgets_2/qml/ClassWidgets/pages/settings/notificationAndTime/: Notification.qml  Time.qml
class_widgets_2/qml/widgets/settings/: test.qml  upcomingActivities.qml
class_widgets_2/themes/: __init__.py
src/: __init__.py
src/core/automations/: base.py  builtin_tasks.py  manager.py  update_check.py
src/core/config/: manager.py  model.py
src/core/convertor/: converter.py
src/core/notification/: manager.py  model.py  provider.py  service.py
src/core/parser/: schedule.py
src/core/plugin/: components.py  loader.py  manager.py  models.py
src/core/schedule/: editor.py  manager.py  model.py  runtime.py  service.py  swapper.py
src/core/themes/: interceptor.py  loader.py  manager.py  model.py
src/core/utils/: calculator.py  json_loader.py
src/core/widgets/: model.py
src/core/windows/: windows.py
src/qml/ClassWidgets/Components/: WidgetsContainer.qml  qmldir
src/qml/ClassWidgets/Components/dialogs/: ClassSwapDialog.qml  ClassSwapRestoreDialog.qml
src/qml/ClassWidgets/Plugins/: SettingsLayout.qml
src/qml/ClassWidgets/Windows/: TrayPanel.qml
src/qml/ClassWidgets/pages/settings/notificationAndTime/: Notification.qml
src/qml/widgets/: dynamicNotification.qml
src/themes/: __init__.py
src/themes/material/ClassWidgets/theme/: qmldir
themes/test/ClassWidgets/theme/components/: Widget.qml
