[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.20.0"]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1"
]

[project]
authors = [
  {email = "lintusup@foxmail.com", name = "RinLit"}
]
dependencies = [
  "PySide6~=6.9.3",
  "RinUI>=0.2.0",
  "loguru",
  "packaging",
  "pydantic",
  "pyyaml",
  "requests"
]
description = "Class Widgets 2, The Next Class Schedule."
dynamic = ["version"]
license = {text = "MIT"}
name = "ClassWidgets-2"
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.hatch.build.targets.wheel]
packages = [
  "src"
]

[tool.hatch.version]
match = "__version__ = '([^']+)'"
path = "src/__init__.py"
