[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.20.0"]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1"
]

[project]
authors = [
  {email = "lintusup@foxmail.com", name = "RinLit"}
]
dependencies = [
  "PySide6~=6.9.3",
  "RinUI>=0.2.0",
  "loguru",
  "packaging",
  "pydantic",
  "pyyaml",
  "requests"
]
description = "Class Widgets 2, The Next Class Schedule."
dynamic = ["version"]
license = {text = "MIT"}
name = "ClassWidgets-2"
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.hatch.build.targets.wheel]
packages = [
  "src"
]

[tool.hatch.version]
match = "__version__ = '([^']+)'"
path = "src/__init__.py"

[tool.pyright]
autoImportCompletions = true
exclude = [
  "**/.venv",
  "**/__pycache__",
  "**/node_modules",
  "**/venv",
  "build",
  "dist"
]
include = ["**/*.py"]
pythonVersion = "3.12"
reportArgumentType = "warning"
reportAttributeAccessIssue = "none"
reportDuplicateImport = "warning"
reportGeneralTypeIssues = "warning"
reportImportCycles = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"
reportMissingParameterType = "none"
reportMissingTypeStubs = "none"
reportOptionalCall = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportOverlappingOverload = "warning"
reportPrivateUsage = "none"
reportSelfClsParameterName = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
strictDictionaryInference = false
strictListInference = false
strictSetInference = false
typeCheckingMode = "standard"
useLibraryCodeForTypes = true

[[tool.pyright.executionEnvironments]]
"pythonPlatform" = "All"
"pythonVersion" = "3.12"
"root" = "."

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
  "ARG002",
  "B008",
  "C901",
  "E203",
  "E402",
  "E501",
  "ERA001",
  "F841",
  "N801",
  "N802",
  "N815",
  "N999",
  "PLC0415",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "PTH123",
  "RUF001", # 字符串 unicode 歧义
  "RUF002", # Docstring  unicode 歧义
  "RUF003" # 注释 unicode 歧义
]
select = [
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "E", # pycodestyle errors
  "ERA", # eradicate
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "PIE", # flake8-pie
  "PL", # pylint
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W" # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E501"]
"__init__.py" = ["F401"]

[tool.tomlsort.overrides."project.dependencies"]
inline_arrays = false
